@@ -7387,6 +7387,9 @@ Same as
 Causes the read to continue to the first character of
 .I delim\^
 instead of the newline control character.
+Multibyte characters for
+.I delim\^
+are not supported.
 .TP 8
 .B \-n
 Causes at most
